[gd_scene load_steps=5 format=3 uid="uid://byjbgc6xcg447"]

[ext_resource type="Theme" uid="uid://bwnv8b362a2w7" path="res://menus/menu_theme.tres" id="1_56uc5"]
[ext_resource type="Script" path="res://menus/leaderboards/speed_run_leaderboard.gd" id="2_fn048"]
[ext_resource type="PackedScene" uid="uid://cgn5lp08830p8" path="res://ui/transition.tscn" id="3_pb213"]

[sub_resource type="Theme" id="Theme_j1gah"]

[node name="speed_run_leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_56uc5")
script = ExtResource("2_fn048")

[node name="Board" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 207.0
offset_right = 1823.0
offset_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 48

[node name="TitleContainer" type="CenterContainer" parent="Board"]
layout_mode = 2

[node name="mode_label" type="Label" parent="Board/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Dog Dash"
horizontal_alignment = 1

[node name="MessageContainer" type="CenterContainer" parent="Board"]
visible = false
layout_mode = 2

[node name="TextMessage" type="Label" parent="Board/MessageContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Loading scores..."

[node name="HighScores" type="CenterContainer" parent="Board"]
layout_mode = 2
theme = SubResource("Theme_j1gah")

[node name="ScrollContainer" type="ScrollContainer" parent="Board/HighScores"]
custom_minimum_size = Vector2(1050, 649)
layout_mode = 2

[node name="ScoreItemContainer" type="VBoxContainer" parent="Board/HighScores/ScrollContainer"]
layout_mode = 2

[node name="back_button" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 292.0
offset_bottom = 123.0
text = "‚Üê Back"

[node name="transition" parent="." instance=ExtResource("3_pb213")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
